--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,151 @@
+
+@import url('header.css');
+@import url('home.css');
+@import url('menu.css');
+@import url('footer.css');
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+    --color-primary-1: #000000;
+    --color-primary-2: #5d387e;
+    --color-primary-3: #640a76;
+    --color-primary-4: #6a076b;
+    --color-primary-5: #5e0075;
+    --color-primary-6: #61157f;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+    --color-neutral-0: #ffffff;
+    --color-neutral-1: #000000;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-html,
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    background-color: var(--color-primary-1);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+section {
+    padding: 28px 8%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.btn-default {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-primary-5);
+    border-radius: 12px;
+    padding: 10px 14px;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color .3s ease;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.btn-default:hover {
+    background-color: var(--color-primary-3);
+}
+.section-title {
+    color: var(--color-primary-6);
+    font-size: 1.563rem;
+}
+
+.section-subtitle {
+    font-size: 2.1875rem;
+} 
+.boxpost {
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    min-width: 25%;
   }
+.dish {
+    height: 100%;
+    width: 100%;
 }
+.dish p{
+    height: 100%;
+}
+#reclamacoes-container {
+    display: flex;
+}
+#mensagem-reclamacoes-vazias {
+    display: block; 
+    text-align: center; 
+    font-size: 20px; 
+    padding-top: 20px; 
+    color: white;
+}
+.form-control {
+    max-width: 250px; /* Ajuste o valor conforme necessário */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/* tela de carregamento */
+.spinner {
+    width: 150.4px;
+    height: 150.4px;
+    --clr: rgb(128, 0, 128);
+    --clr-alpha: rgb(128, 0, 128, 0.1);
+    animation: spinner 3.2s infinite ease;
+    transform-style: preserve-3d;
+    }
+    
+    .spinner > div {
+    background-color: var(--clr-alpha);
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    border: 3.5px solid var(--clr);
+    }
+    
+    .spinner div:nth-of-type(1) {
+    transform: translateZ(-35.2px) rotateY(180deg);
+    }
+    
+    .spinner div:nth-of-type(2) {
+    transform: rotateY(-270deg) translateX(50%);
+    transform-origin: top right;
+    }
+    
+    .spinner div:nth-of-type(3) {
+    transform: rotateY(270deg) translateX(-50%);
+    transform-origin: center left;
+    }
+    
+    .spinner div:nth-of-type(4) {
+    transform: rotateX(90deg) translateY(-50%);
+    transform-origin: top center;
+    }
+    
+    .spinner div:nth-of-type(5) {
+    transform: rotateX(-90deg) translateY(50%);
+    transform-origin: bottom center;
+    }
+    
+    .spinner div:nth-of-type(6) {
+    transform: translateZ(35.2px);
+    }
+    
+    @keyframes spinner {
+    0% {
+    transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
+    }
+    
+    50% {
+    transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
+    }
+    
+    100% {
+    transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
+    }
+    }
